# LongYield

./: .gitignore  Cargo.toml  blockchain.json
cpp/: CMakeLists.txt
cpp/include/: longyield_ffi.h
cpp/src/: main.cpp
src/: ai_validation.rs  block.rs  blockchain.rs  consensus.rs  consensus_manager.rs  crypto.rs  gui.rs  lib.rs  main.rs  mempool.rs  network.rs  persistence.rs  pos.rs  pow.rs  transaction_pool.rs  wallet.rs  zksnarks.rs
