[package]
name = "longyield"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
# Use libp2p v0.55 with the needed features.
libp2p = { version = "0.55", features = ["noise", "ping", "tcp", "yamux"] }
# The derive macro for NetworkBehaviour is now in its own crate.
libp2p-swarm-derive = "0.35.0"
clap = { version = "4.2", features = ["derive"] }
# ed25519-dalek with no default features, and using its std backend.
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["std"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6.4"
futures = "0.3"
# Explicit dependency for curve25519-dalek with a backend enabled.
curve25519-dalek = { version = "3.2.0", features = ["u64_backend"], default-features = false }
