[package]
name = "longyield"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p-swarm-derive = { version = "0.25.0-rc.1" }
libp2p = { version = "0.46.1", features = ["tcp-tokio"] }
ed25519-dalek = "1.0.1"
curve25519-dalek = { version = "3.2.0", features = ["u64_backend"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
rand = "0.7.0"
rand_chacha = "0.9.0"
rand_core = "0.9.0"
futures = "0.3"
